js-version/8.strings/gen/StringsParser.js
// Generated from /Users/shenyin.sy/projects/myLisp/js-version/8.strings/Strings.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var grammarFileName = "Strings.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, "'('", "')'", "'{'", 
                     "'}'", "'*'", "'/'", "'+'", "'-'" ];

var symbolicNames = [ null, "NUMBER", "COMMENT", "STRING", "SYMBOL", "LP", 
                      "RP", "LB", "RB", "MUL", "DIV", "ADD", "SUB", "WS" ];

var ruleNames =  [ "lispy", "expr", "sexpr", "qexpr", "comment", "string" ];

function StringsParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

StringsParser.prototype = Object.create(antlr4.Parser.prototype);
StringsParser.prototype.constructor = StringsParser;

Object.defineProperty(StringsParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

StringsParser.EOF = antlr4.Token.EOF;
StringsParser.NUMBER = 1;
StringsParser.COMMENT = 2;
StringsParser.STRING = 3;
StringsParser.SYMBOL = 4;
StringsParser.LP = 5;
StringsParser.RP = 6;
StringsParser.LB = 7;
StringsParser.RB = 8;
StringsParser.MUL = 9;
StringsParser.DIV = 10;
StringsParser.ADD = 11;
StringsParser.SUB = 12;
StringsParser.WS = 13;

StringsParser.RULE_lispy = 0;
StringsParser.RULE_expr = 1;
StringsParser.RULE_sexpr = 2;
StringsParser.RULE_qexpr = 3;
StringsParser.RULE_comment = 4;
StringsParser.RULE_string = 5;

function LispyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StringsParser.RULE_lispy;
    return this;
}

LispyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LispyContext.prototype.constructor = LispyContext;

LispyContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};




StringsParser.LispyContext = LispyContext;

StringsParser.prototype.lispy = function() {

    var localctx = new LispyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, StringsParser.RULE_lispy);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 15;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << StringsParser.NUMBER) | (1 << StringsParser.COMMENT) | (1 << StringsParser.STRING) | (1 << StringsParser.SYMBOL) | (1 << StringsParser.LP) | (1 << StringsParser.LB))) !== 0)) {
            this.state = 12;
            this.expr();
            this.state = 17;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StringsParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.NUMBER = function() {
    return this.getToken(StringsParser.NUMBER, 0);
};

ExprContext.prototype.SYMBOL = function() {
    return this.getToken(StringsParser.SYMBOL, 0);
};

ExprContext.prototype.sexpr = function() {
    return this.getTypedRuleContext(SexprContext,0);
};

ExprContext.prototype.qexpr = function() {
    return this.getTypedRuleContext(QexprContext,0);
};

ExprContext.prototype.string = function() {
    return this.getTypedRuleContext(StringContext,0);
};

ExprContext.prototype.comment = function() {
    return this.getTypedRuleContext(CommentContext,0);
};




StringsParser.ExprContext = ExprContext;

StringsParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, StringsParser.RULE_expr);
    try {
        this.state = 24;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case StringsParser.NUMBER:
            this.enterOuterAlt(localctx, 1);
            this.state = 18;
            this.match(StringsParser.NUMBER);
            break;
        case StringsParser.SYMBOL:
            this.enterOuterAlt(localctx, 2);
            this.state = 19;
            this.match(StringsParser.SYMBOL);
            break;
        case StringsParser.LP:
            this.enterOuterAlt(localctx, 3);
            this.state = 20;
            this.sexpr();
            break;
        case StringsParser.LB:
            this.enterOuterAlt(localctx, 4);
            this.state = 21;
            this.qexpr();
            break;
        case StringsParser.STRING:
            this.enterOuterAlt(localctx, 5);
            this.state = 22;
            this.string();
            break;
        case StringsParser.COMMENT:
            this.enterOuterAlt(localctx, 6);
            this.state = 23;
            this.comment();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SexprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StringsParser.RULE_sexpr;
    return this;
}

SexprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SexprContext.prototype.constructor = SexprContext;

SexprContext.prototype.LP = function() {
    return this.getToken(StringsParser.LP, 0);
};

SexprContext.prototype.RP = function() {
    return this.getToken(StringsParser.RP, 0);
};

SexprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};




StringsParser.SexprContext = SexprContext;

StringsParser.prototype.sexpr = function() {

    var localctx = new SexprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, StringsParser.RULE_sexpr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 26;
        this.match(StringsParser.LP);
        this.state = 30;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << StringsParser.NUMBER) | (1 << StringsParser.COMMENT) | (1 << StringsParser.STRING) | (1 << StringsParser.SYMBOL) | (1 << StringsParser.LP) | (1 << StringsParser.LB))) !== 0)) {
            this.state = 27;
            this.expr();
            this.state = 32;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 33;
        this.match(StringsParser.RP);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function QexprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StringsParser.RULE_qexpr;
    return this;
}

QexprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QexprContext.prototype.constructor = QexprContext;

QexprContext.prototype.LB = function() {
    return this.getToken(StringsParser.LB, 0);
};

QexprContext.prototype.RB = function() {
    return this.getToken(StringsParser.RB, 0);
};

QexprContext.prototype.expr = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExprContext);
    } else {
        return this.getTypedRuleContext(ExprContext,i);
    }
};




StringsParser.QexprContext = QexprContext;

StringsParser.prototype.qexpr = function() {

    var localctx = new QexprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, StringsParser.RULE_qexpr);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 35;
        this.match(StringsParser.LB);
        this.state = 39;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << StringsParser.NUMBER) | (1 << StringsParser.COMMENT) | (1 << StringsParser.STRING) | (1 << StringsParser.SYMBOL) | (1 << StringsParser.LP) | (1 << StringsParser.LB))) !== 0)) {
            this.state = 36;
            this.expr();
            this.state = 41;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 42;
        this.match(StringsParser.RB);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function CommentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StringsParser.RULE_comment;
    return this;
}

CommentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CommentContext.prototype.constructor = CommentContext;

CommentContext.prototype.COMMENT = function() {
    return this.getToken(StringsParser.COMMENT, 0);
};




StringsParser.CommentContext = CommentContext;

StringsParser.prototype.comment = function() {

    var localctx = new CommentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, StringsParser.RULE_comment);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44;
        this.match(StringsParser.COMMENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StringContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = StringsParser.RULE_string;
    return this;
}

StringContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StringContext.prototype.constructor = StringContext;

StringContext.prototype.STRING = function() {
    return this.getToken(StringsParser.STRING, 0);
};




StringsParser.StringContext = StringContext;

StringsParser.prototype.string = function() {

    var localctx = new StringContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, StringsParser.RULE_string);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.match(StringsParser.STRING);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


exports.StringsParser = StringsParser;
